[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Visuals/Fonts/MainFont.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Visuals/Tilesheets/Main_Tilesheet.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=2]

hinting = 2
font_path = "res://Assets/Visuals/Fonts/MainFont.TTF"

[sub_resource type="DynamicFont" id=3]

size = 50
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="StartScreen" type="Container" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Focus", "Mouse", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButton" type="Button" parent="StartScreen" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -91.0
margin_right = 75.0
margin_bottom = -29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ResumeButton" type="Button" parent="StartScreen" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -179.0
margin_right = 90.0
margin_bottom = -117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="StartButton" type="Button" parent="StartScreen" index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -179.0
margin_right = 75.0
margin_bottom = -117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NewGameButton" type="Button" parent="StartScreen" index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 29.0
margin_right = 112.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="DifficultySelectScreen" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ZenModeButton" type="Button" parent="DifficultySelectScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 103.0
margin_top = -31.0
margin_right = 388.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Zen Mode"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NormalModeButton" type="Button" parent="DifficultySelectScreen" index="1"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -387.0
margin_top = -31.0
margin_right = -102.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Normal Mode"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="BackButton" type="Button" parent="DifficultySelectScreen" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 160.0
margin_right = 75.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="PlayScreen" type="Container" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Item1" type="Sprite" parent="PlayScreen" index="0"]

position = Vector2( 956.581, 150.353 )
texture = ExtResource( 3 )
vframes = 8
hframes = 13
frame = 28
_sections_unfolded = [ "Animation", "Transform" ]

[node name="Item2" type="Sprite" parent="PlayScreen" index="1"]

position = Vector2( 956.581, 239.282 )
texture = ExtResource( 3 )
vframes = 8
hframes = 13
frame = 27
_sections_unfolded = [ "Animation", "Transform" ]

[node name="Item4" type="Sprite" parent="PlayScreen" index="2"]

position = Vector2( 956.581, 331.534 )
texture = ExtResource( 3 )
vframes = 8
hframes = 13
frame = 39
_sections_unfolded = [ "Animation", "Transform" ]

[node name="Item5" type="Sprite" parent="PlayScreen" index="3"]

position = Vector2( 956.581, 422.393 )
texture = ExtResource( 3 )
vframes = 8
hframes = 13
frame = 41
_sections_unfolded = [ "Animation", "Transform" ]

[connection signal="pressed" from="StartScreen/QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="pressed" from="StartScreen/ResumeButton" to="." method="_on_Resume_Button_pressed"]

[connection signal="pressed" from="StartScreen/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="StartScreen/NewGameButton" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="DifficultySelectScreen/ZenModeButton" to="." method="_on_ZenModeButton_pressed"]

[connection signal="pressed" from="DifficultySelectScreen/NormalModeButton" to="." method="_on_NormalModeButton_pressed"]

[connection signal="pressed" from="DifficultySelectScreen/BackButton" to="." method="_on_BackButton_pressed"]


